fix color / align

--- a/characters/characters.css
+++ b/characters/characters.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color: aqua;
+    background-color: chartreuse;
     text-align: left;
 }
 h1 {
